@@ -39,6 +39,7 @@ ChangeLog
 [+] * SMSD now handles SIGHUP for rereading configuration.
 [+] * Added LSB init script for SMSD.
 [+] * SMSD can now log to stderr/stdout.
+[+] * RunOnReceive now can get IDs of received messages.
     
 20081219 - 1.22.1
 
